# h3b

H1/: main.cpp
h1qt/: CMakeLists.txt
h2aqt/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  car.cpp  car.h  cmake_install.cmake  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
h2aqt/.cmake/api/v1/reply/: codemodel-v2-10f4cd68e7d404917969.json  target-h2aqt-Debug-84c6abf04ba74de0f8a9.json
h2aqt/.cmake/api/v1/reply.prev/: cache-v2-8823969dc510d26eb4f1.json  cmakeFiles-v1-bf1b6f5495d80e89502c.json  directory-.-Debug-429038cce16ce5b45732.json  index-2025-11-09T13-50-21-0044.json
h2aqt/.qtc_clangd/: compile_commands.json
h2aqt/.qtc_clangd/.cache/clangd/index/: car.cpp.A8F484725C102918.idx  car.h.58F05B4F45EB17E8.idx  main.cpp.81AF72ADFBDD4FC4.idx  rectangle.cpp.78FCC68BDACA232D.idx  rectangle.h.7394823845B063BE.idx  student.cpp.0A80D9FC46E4B3BA.idx  student.h.9C368D3168C73459.idx
