cmake_minimum_required(VERSION 3.16)

project(h2aqt LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(h2aqt
main.cpp
Car.cpp
Rectangle.cpp
Student.cpp
student.cpp)

include(GNUInstallDirs)
install(TARGETS h2aqt
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
